src/objects/No_Fee_Required_Criteria__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API__c</fullName>
        <label>Field_API</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Object__c</fullName>
        <label>Primary Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <label>Program Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>No Fee Required Criteria</label>
    <pluralLabel>No Fee Required Criteria</pluralLabel>
</CustomObject>